--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="animations.css">
         <meta charset="utf-8">
-        <title>Effects and other stuff</title>
+        <title>animazioni</title>
     </head>
     <body>
         <div class="container">
